# polarctic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmark-compare.yml  ci.yml  lint.yml  release.yml  typing.yml
notebooks/: demo.ipynb  polarctic_features.ipynb
polarctic/: __init__.py  polarctic.py
tests/: bench_compare.py  bench_scan_arcticdb.py  conftest.py  test_query_translation.py  test_scan_arcticdb.py
